syntax = "proto3";
package bze.cointrunk.v1;

import "gogoproto/gogo.proto";
import "bze/cointrunk/v1/params.proto";
import "bze/cointrunk/v1/publisher.proto";
import "bze/cointrunk/v1/accepted_domain.proto";
import "bze/cointrunk/v1/article.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/bze-alphateam/bze/x/cointrunk/types";

// GenesisState defines the cointrunk module's genesis state.
message GenesisState {
  Params params = 1 [
    (gogoproto.nullable) = false
  ];
  repeated Publisher publisher_list = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)      = "publishers_list,omitempty"
  ];
  repeated AcceptedDomain accepted_domain_list = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)      = "accepted_domain_list,omitempty"
  ];
  repeated Article article_list = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)      = "article_list,omitempty"
  ];
  uint64 articles_counter = 5 [
    (gogoproto.jsontag)      = "articles_counter,omitempty"
  ];
  // this line is used by starport scaffolding # genesis/proto/state
}
